# orchestration-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/adapters/: __init__.py
app/adapters/llm/: __init__.py  base.py
app/adapters/memory/: __init__.py  base.py
app/core/: __init__.py
app/core/entities/: __init__.py  agent.py  memory.py  message.py  plan.py  router.py  tool.py
app/infrastructure/: __init__.py
app/infrastructure/cli/: __init__.py  main.py
app/infrastructure/config/: __init__.py  loader.py
app/infrastructure/logging/: __init__.py  logger.py
app/use_cases/: __init__.py  orchestrator.py  planner.py  ports.py  router.py
docs/: architecture.md
tests/: conftest.py
tests/integration/: test_placeholder.py
tests/unit/: test_placeholder.py
